--- a/src/components/app/_App.astro
+++ b/src/components/app/_App.astro
@@ -1,7 +1,10 @@
 ---
 import { getI18N } from "@/i18n"
 import Layout from "@/layouts/Layout.astro";
-import Hero from "@/components/app/0_Hero.astro";
+
+import Hero from "./Hero.astro";
+import About from './About.astro'
+import Experience from "./Experience.astro";
 
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
@@ -13,4 +16,6 @@ const i18n = getI18N({ currentLocale })
   i18nHeader={i18n.HEADER}
 >
   <Hero i18n={i18n.HERO} />
+  <About i18n={i18n.ABOUT_ME} />
+  <Experience i18n={i18n.EXPERIENCE} />
 </Layout>
