--- a/src/components/app/About.astro
+++ b/src/components/app/About.astro
@@ -2,10 +2,10 @@
 import Section from "@/layouts/Section.astro"
 import { Button, Title } from "@/components/ui"
 
-const { i18n } = Astro.props
+const { i18n } = Astro.props as { i18n: ABOUT }
 ---
 
-<Section maxWidth="900px" class="py-20 tablet:py-0" id="about">
+<Section id="about" maxWidth="900px">
   <div class="scroll-animation flex flex-col">
     <Title>{ i18n.TITLE }</Title>
     <div class="flex flex-col items-center justify-center tablet:items-start tablet:flex-row-reverse gap-12">
