--- a/src/components/app/Experience.astro
+++ b/src/components/app/Experience.astro
@@ -2,10 +2,10 @@
 import Section from "@/layouts/Section.astro";
 import { Title } from "@/components/ui";
 
-const { i18n } = Astro.props
+const { i18n } = Astro.props as { i18n: EXP }
 ---
 
-<Section id="experience" maxWidth="800px" class="py-20 tablet:py-0">
+<Section id="experience" maxWidth="800px">
   <div class="scroll-animation w-full">
     <Title>{i18n.TITLE}</Title>
     <ul class="relative before:bg-textColor-200 before:inline before:absolute before:left-[7px] before:w-px before:top-[0px] before:mt-[0.4em] before:h-[calc(100%-0.4em)] z-10">
