--- a/src/components/app/Hero.astro
+++ b/src/components/app/Hero.astro
@@ -1,17 +1,18 @@
 ---
 import Section from "@/layouts/Section.astro"
 import { Button } from "@/components/ui"
+import { handleScroll } from "@/components/ui/Header/HeaderNavItems"
 
-const { i18n } = Astro.props
+const { i18n } = Astro.props as { i18n: HERO }
 
 const codingYears = new Date().getFullYear() - 2020
 ---
 
-<Section class="tablet:mt-[-70px]" maxWidth="1000px">
+<Section class="min-h-[calc(100vh-5rem)] max-h-none" maxWidth="1000px">
   <div class="flex items-center h-full w-full relative">
     <div class="flex flex-col justify-center pb-60px w-full tablet:p-0">
       <div class={'animate-fadeUp delay-[2s]'}>
-        <h1 class="text-clamp font-extrabold text-textColor-300 leading-[1.2em] tracking-wide">
+        <h1 class="text-hero font-extrabold text-textColor-300 leading-[1.2em] tracking-wide">
           Ivan Miyashiro.
           <span class="hidden mobile:block text-textColor-200">Software Developer.</span>
           <span class="mobile:hidden block text-textColor-200">Software Dev.</span>
@@ -20,14 +21,14 @@ const codingYears = new Date().getFullYear() - 2020
           <span class="text-accent-100 font-medium">+{codingYears} {i18n.RICH_TEXT.ACCENT} </span> {i18n.RICH_TEXT.TEXT}<span class="text-accent-100 font-medium"> React.js & Node.js</span>
         </p>
         <div class="flex gap-4">
-          <Button className="w-[125px] tablet:w-[150px] !rounded ">
+          <Button className="w-[125px] tablet:w-[150px] !rounded">
             {i18n.PRIMARY_BTN}
           </Button>
-          <Button 
-            isLink={true}
-            href="#about"
+          <Button
+            client:load
             variant="outlined" 
             className="w-[125px] tablet:w-[150px] !rounded"
+            onClick={() => console.log('hola')}
           >
             {i18n.SECONDARY_BTN}
           </Button>
