--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,14 +2,12 @@
 import { Header, SocialMedia } from '@/components/ui'
 import '@fontsource-variable/onest';
 
-interface Props {
+const { currentLocale } = Astro
+const { title, description, i18nHeader } = Astro.props as {
 	title: string
   description: string
   i18nHeader: string[]
-}
-
-const { title, description, i18nHeader } = Astro.props;
-const { currentLocale } = Astro
+};
 ---
 
 <!doctype html>
@@ -22,7 +20,7 @@ const { currentLocale } = Astro
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-slate-950 text-textColor-200 before:absolute before:bottom-0 before:left-0 before:right-0 before:top-0 before:bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] before:bg-[size:40px_40px] before:[mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_100%,transparent_100%)] after:fixed after:bottom-0 after:z-[-2] after:w-full after:h-screen after:bg-[radial-gradient(ellipse_80%_80%_at_50%_125%,rgba(120,119,198,0.2),rgba(255,255,255,0))]">
+	<body class="bg-slate-950 overflow-x-hidden text-textColor-200 before:absolute before:bottom-0 before:left-0 before:right-0 before:top-0 before:bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] before:bg-[size:40px_40px] before:[mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_100%,transparent_100%)] after:fixed after:bottom-0 after:z-[-2] after:w-full after:h-screen after:bg-[radial-gradient(ellipse_80%_80%_at_50%_125%,rgba(120,119,198,0.2),rgba(255,255,255,0))]">
     <Header client:load i18n={i18nHeader} />
     <main class="mt-[80px] tablet:mt-[70px]">
 		  <slot />
@@ -50,12 +48,23 @@ const { currentLocale } = Astro
     background-color: #fff;
   }
 
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
   @keyframes blur {
     to {
       box-shadow:
         0px 5px 50px -5px rgba(0, 0, 0, 0.1),
         0px 0px 0 1px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(20px);
     }
   }
 
