Add section animation

--- a/src/components/app/About.astro
+++ b/src/components/app/About.astro
@@ -5,7 +5,7 @@ import { Button, Title } from "@/components/ui"
 const { i18n } = Astro.props as { i18n: ABOUT }
 ---
 
-<Section id="about" maxWidth="900px">
+<Section id="about" maxWidth="900px" animated>
   <div class="scroll-animation flex flex-col">
     <Title>{ i18n.TITLE }</Title>
     <div class="flex flex-col items-center justify-center tablet:items-start tablet:flex-row-reverse gap-12">
