--- a/src/components/app/Contact.astro
+++ b/src/components/app/Contact.astro
@@ -6,9 +6,10 @@ const { i18n } = Astro.props as { i18n: CONTACT }
 ---
 
 <Section 
-  id="skills"
+  id="contact"
   maxWidth="650px"
   class="w-full flex flex-col"
+  animated
 >
   <Title aligment="center">
     { i18n.TITLE }
