--- a/src/components/app/Experience.astro
+++ b/src/components/app/Experience.astro
@@ -5,7 +5,7 @@ import { Title } from "@/components/ui";
 const { i18n } = Astro.props as { i18n: EXP }
 ---
 
-<Section id="experience" maxWidth="800px">
+<Section id="experience" maxWidth="800px" animated>
   <div class="scroll-animation w-full">
     <Title>{i18n.TITLE}</Title>
     <ul class="relative before:bg-textColor-200 before:inline before:absolute before:left-[7px] before:w-px before:top-[0px] before:mt-[0.4em] before:h-[calc(100%-0.4em)] z-10">
