--- a/src/components/app/Projects.astro
+++ b/src/components/app/Projects.astro
@@ -9,6 +9,7 @@ const { i18n } = Astro.props as { i18n: PROJECTS }
   id="projects"
   maxWidth="1200px"
   class="flex flex-col justify-center items-baseline"
+  animated
 >
   <ProjectsComponent
     client:load
