--- a/src/components/app/Skills.astro
+++ b/src/components/app/Skills.astro
@@ -9,6 +9,7 @@ const { i18n } = Astro.props as { i18n: SKILLS }
   id="skills"
   maxWidth="900px"
   class="-z-20"
+  animated
 >
   <SkillsList 
     client:load 
