--- a/src/components/app/Contact.astro
+++ b/src/components/app/Contact.astro
@@ -19,7 +19,7 @@ const { i18n } = Astro.props as { i18n: CONTACT }
     variant="outlined"
     isLink={true}
     href="mailto: ivo.miyashiro1@gmail.com"
-    className="mt-12 w-[150px] h-[50px]"
+    className="mt-12 w-[150px] h-[50px] tablet:h-[45px]"
   >
     Send Email
     <ArrowLeftIcon className="ml-2" />
