--- a/src/components/app/Hero.astro
+++ b/src/components/app/Hero.astro
@@ -7,9 +7,9 @@ const { i18n } = Astro.props as { i18n: HERO }
 const codingYears = new Date().getFullYear() - 2020
 ---
 
-<Section class="min-h-[calc(100vh-5rem)] max-h-none" maxWidth="1000px">
+<Section class="min-h-[calc(100vh-5rem)] max-h-none pt-20" maxWidth="1000px">
   <div class="flex items-center h-full w-full relative">
-    <div class="flex flex-col justify-center pb-60px w-full tablet:p-0">
+    <div class="flex flex-col justify-center w-full tablet:p-0">
       <div class={'animate-fadeUp delay-[2s]'}>
         <h1 class="text-hero font-extrabold text-textColor-300 leading-[1.2em] tracking-wide">
           Ivan Miyashiro.
@@ -20,12 +20,12 @@ const codingYears = new Date().getFullYear() - 2020
           <span class="text-accent-100 font-medium">+{codingYears} {i18n.RICH_TEXT.ACCENT} </span> {i18n.RICH_TEXT.TEXT}<span class="text-accent-100 font-medium"> React.js & Node.js</span>
         </p>
         <div class="flex gap-4">
-          <Button className="w-[125px] tablet:w-[150px] !rounded">
+          <Button className="w-[125px] tablet:w-[150px] tablet:h-[45px]">
             {i18n.PRIMARY_BTN}
           </Button>
           <Button
             variant="outlined" 
-            className="w-[125px] tablet:w-[150px] !rounded flex gap-2"
+            className="w-[125px] tablet:w-[150px] tablet:h-[45px] flex gap-2"
             data-about-btn
           >
             {i18n.SECONDARY_BTN}
