--- a/src/components/app/Contact.astro
+++ b/src/components/app/Contact.astro
@@ -9,7 +9,7 @@ const { i18n } = Astro.props as { i18n: CONTACT }
   id="contact"
   maxWidth="650px"
   class="w-full flex flex-col"
-  animated
+  animated={true}
 >
   <Title aligment="center">
     { i18n.TITLE }
