--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import { Footer, Header, SocialMedia } from '@/components/ui'
 import '@fontsource-variable/onest';
+import { Footer, Header, SocialMedia } from '@/components/ui'
 
 const { currentLocale } = Astro
 const { title, description, i18nHeader, i18nFooter } = Astro.props as {
@@ -30,6 +30,7 @@ const { title, description, i18nHeader, i18nFooter } = Astro.props as {
     <SocialMedia client:load currentLocale={currentLocale} />
 	</body>
 </html>
+
 <style is:global>
   ::-webkit-scrollbar {
     width: 14px;
@@ -50,15 +51,13 @@ const { title, description, i18nHeader, i18nFooter } = Astro.props as {
     background-color: #fff;
   }
 
-  /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
+
   .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
   @keyframes blur {
